tests/baselines/reference/newNonReferenceType.errors.txt
tests/cases/compiler/newNonReferenceType.ts(1,13): error TS2304: Cannot find name 'any'.
tests/cases/compiler/newNonReferenceType.ts(2,13): error TS2304: Cannot find name 'boolean'.


==== tests/cases/compiler/newNonReferenceType.ts (2 errors) ====
    var a = new any();
                ~~~
!!! error TS2304: Cannot find name 'any'.
    var b = new boolean(); // error
                ~~~~~~~
!!! error TS2304: Cannot find name 'boolean'.
    